fix(address overflow issue): addresses no longer overflow for result items

--- a/src/app/listing-search/search-results/result-item/result-item.component.scss
+++ b/src/app/listing-search/search-results/result-item/result-item.component.scss
@@ -2,8 +2,8 @@
     background-color: white;
 
     .result-card-address {
-        max-height: 6em;
-        overflow: hidden;
+        white-space: nowrap;
+        -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0));
     }
 }
 
